[package]
name = "secure_ecg_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
ed25519-dalek = { version = "1.0.1", default-features = false, features = ["serde"] }
curve25519-dalek = { version = "3.2.0", default-features = false, features = ["u64_backend"] }
anyhow = "1.0"